cmake_minimum_required(VERSION 3.20)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)
add_definitions(-DLOCAL)
MATH(EXPR stack_size "204800000")
set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")

add_executable(tmp tmp.cpp)

add_executable(acwing_321 acwing/course/course2/1_dp/1.6_interval/acwing_321.cpp)
add_executable(acwing_1072 acwing/course/course2/1_dp/1.7_tree/acwing_1072.cpp)
add_executable(acwing_1073 acwing/course/course2/1_dp/1.7_tree/acwing_1073.cpp)
add_executable(acwing_1075 acwing/course/course2/1_dp/1.7_tree/acwing_1075.cpp)
add_executable(acwing_1074 acwing/course/course2/1_dp/1.7_tree/acwing_1074.cpp)
add_executable(acwing_10 acwing/course/course2/1_dp/1.3_knapsack/acwing_10.cpp)
add_executable(acwing_323 acwing/course/course2/1_dp/1.7_tree/acwing_323.cpp)
add_executable(acwing_1077 acwing/course/course2/1_dp/1.7_tree/acwing_1077.cpp)
add_executable(acwing_1081 acwing/course/course2/1_dp/1.8_digit/acwing_1081.cpp)
add_executable(acwing_1082 acwing/course/course2/1_dp/1.8_digit/acwing_1082.cpp)
add_executable(acwing_1083 acwing/course/course2/1_dp/1.8_digit/acwing_1083.cpp)
add_executable(acwing_1084 acwing/course/course2/1_dp/1.8_digit/acwing_1084.cpp)
add_executable(acwing_1085 acwing/course/course2/1_dp/1.8_digit/acwing_1085.cpp)
add_executable(P1980 luogu/practice/dp/digit/P1980.cpp)
add_executable(B codeforces/contest/round/785/B.cpp)
add_executable(C codeforces/contest/round/789/C.cpp)
add_executable(D codeforces/contest/round/773/D.cpp)
add_executable(P2602 luogu/practice/dp/digit/P2602.cpp)
add_executable(E codeforces/contest/round/773/E.cpp)
add_executable(acwing_1086 acwing/course/course2/1_dp/1.8_digit/acwing_1086.cpp)
add_executable(acwing_1684 acwing/practice/winter_daily_2022/week_6/acwing_1684.cpp)
add_executable(acwing_1460 acwing/practice/winter_daily_2022/week_6/acwing_1460.cpp)
add_executable(acwing_1471 acwing/practice/winter_daily_2022/week_6/acwing_1471.cpp)
add_executable(acwing_135 acwing/course/course2/1_dp/1.9_monotonicity_queue/acwing_135.cpp)
add_executable(acwing_1087 acwing/course/course2/1_dp/1.9_monotonicity_queue/acwing_1087.cpp)
add_executable(acwing_1088 acwing/course/course2/1_dp/1.9_monotonicity_queue/acwing_1088.cpp)
add_executable(acwing_1089 acwing/course/course2/1_dp/1.9_monotonicity_queue/acwing_1089.cpp)
add_executable(acwing_1090 acwing/course/course2/1_dp/1.9_monotonicity_queue/acwing_1090.cpp)
add_executable(acwing_1091 acwing/course/course2/1_dp/1.9_monotonicity_queue/acwing_1091.cpp)
add_executable(acwing_1097 acwing/course/course2/2_search/2.1_flood_fill/acwing_1097.cpp)
add_executable(acwing_300 acwing/course/course2/1_dp/1.10_slope_optimization/acwing_300.cpp)
add_executable(acwing_1098 acwing/course/course2/2_search/2.1_flood_fill/acwing_1098.cpp)
add_executable(acwing_1106 acwing/course/course2/2_search/2.1_flood_fill/acwing_1106.cpp)
add_executable(acwing_1076 acwing/course/course2/2_search/2.2_shortest_path/acwing_1076.cpp)
add_executable(acwing_188 acwing/course/course2/2_search/2.2_shortest_path/acwing_188.cpp)
add_executable(acwing_1100 acwing/course/course2/2_search/2.2_shortest_path/acwing_1100.cpp)
add_executable(acwing_173 acwing/course/course2/2_search/2.3_multi_source_bfs/acwing_173.cpp)
add_executable(acwing_301 acwing/course/course2/1_dp/1.10_slope_optimization/acwing_301.cpp)
add_executable(acwing_302 acwing/course/course2/1_dp/1.10_slope_optimization/acwing_302.cpp)
add_executable(acwing_303 acwing/course/course2/1_dp/1.10_slope_optimization/acwing_303.cpp)
add_executable(acwing_1107 acwing/course/course2/2_search/2.4_minimum_step/acwing_1107.cpp)
add_executable(acwing_175 acwing/course/course2/2_search/2.5_deque_bfs/acwing_175.cpp)
add_executable(acwing_190 acwing/course/course2/2_search/2.6_double_bfs/acwing_190.cpp)
add_executable(acwing_1443 acwing/practice/winter_daily_2022/week_7/acwing_1443.cpp)
add_executable(acwing_1672 acwing/practice/winter_daily_2022/week_7/acwing_1672.cpp)
add_executable(acwing_1660 acwing/practice/winter_daily_2022/week_7/acwing_1660.cpp)
add_executable(acwing_3347 acwing/practice/winter_daily_2022/week_7/acwing_3347.cpp)
add_executable(acwing_178 acwing/course/course2/2_search/2.7_A_star/acwing_178.cpp)
add_executable(acwing_179 acwing/course/course2/2_search/2.7_A_star/acwing_179.cpp)
add_executable(acwing_1112 acwing/course/course2/2_search/2.8_dfs_connection/acwing_1112.cpp)
add_executable(acwing_1113 acwing/course/course2/2_search/2.8_dfs_connection/acwing_1113.cpp)
add_executable(acwing_1116 acwing/course/course2/2_search/2.9_dfs_search_order/acwing_1116.cpp)
add_executable(acwing_1117 acwing/course/course2/2_search/2.9_dfs_search_order/acwing_1117.cpp)
add_executable(acwing_1118 acwing/course/course2/2_search/2.9_dfs_search_order/acwing_1118.cpp)
add_executable(acwing_165 acwing/course/course2/2_search/2.10_dfs_prune/acwing_165.cpp)
add_executable(acwing_166 acwing/course/course2/2_search/2.10_dfs_prune/acwing_166.cpp)
add_executable(acwing_167 acwing/course/course2/2_search/2.10_dfs_prune/acwing_167.cpp)
add_executable(acwing_168 acwing/course/course2/2_search/2.10_dfs_prune/acwing_168.cpp)
add_executable(acwing_170 acwing/course/course2/2_search/2.11_iterative_deepening/acwing_170.cpp)
add_executable(acwing_171 acwing/course/course2/2_search/2.12_double_dfs/acwing_171.cpp)
add_executable(acwing_180 acwing/course/course2/2_search/2.13_IDA_star/acwing_180.cpp)
add_executable(acwing_181 acwing/course/course2/2_search/2.13_IDA_star/acwing_181.cpp)
add_executable(acwing_1129 acwing/course/course2/3_graph/3.1_single_source_build_graph/acwing_1129.cpp)
add_executable(acwing_1128 acwing/course/course2/3_graph/3.1_single_source_build_graph/acwing_1128.cpp)
add_executable(acwing_1127 acwing/course/course2/3_graph/3.1_single_source_build_graph/acwing_1127.cpp)
add_executable(acwing_1126 acwing/course/course2/3_graph/3.1_single_source_build_graph/acwing_1126.cpp)
add_executable(acwing_920 acwing/course/course2/3_graph/3.1_single_source_build_graph/acwing_920.cpp)
add_executable(acwing_903 acwing/course/course2/3_graph/3.1_single_source_build_graph/acwing_903.cpp)
add_executable(acwing_1135 acwing/course/course2/3_graph/3.2_single_source_applications/acwing_1135.cpp)
add_executable(acwing_340 acwing/course/course2/3_graph/3.2_single_source_applications/acwing_340.cpp)
add_executable(acwing_342 acwing/course/course2/3_graph/3.2_single_source_applications/acwing_342.cpp)
add_executable(acwing_341 acwing/course/course2/3_graph/3.2_single_source_applications/acwing_341.cpp)
add_executable(acwing_341_gt acwing/course/course2/3_graph/3.2_single_source_applications/acwing_341_gt.cpp)
add_executable(CF896C codeforces/practice/odt/CF896C.cpp)
add_executable(acwing_1137 acwing/course/course2/3_graph/3.3_single_source_extensions/acwing_1137.cpp)
add_executable(acwing_1131 acwing/course/course2/3_graph/3.3_single_source_extensions/acwing_1131.cpp)
add_executable(acwing_1134 acwing/course/course2/3_graph/3.3_single_source_extensions/acwing_1134.cpp)
add_executable(acwing_383 acwing/course/course2/3_graph/3.3_single_source_extensions/acwing_383.cpp)
add_executable(poj_3255 poj/shortest_path/poj_3255.cpp)
add_executable(acwing_343 acwing/course/course2/3_graph/3.4_floyd/acwing_343.cpp)
add_executable(acwing_1125 acwing/course/course2/3_graph/3.4_floyd/acwing_1125.cpp)
add_executable(acwing_344 acwing/course/course2/3_graph/3.4_floyd/acwing_344.cpp)
add_executable(acwing_345 acwing/course/course2/3_graph/3.4_floyd/acwing_345.cpp)
add_executable(acwing_1140 acwing/course/course2/3_graph/3.5_minimum_spanning_tree/acwing_1140.cpp)
add_executable(acwing_1141 acwing/course/course2/3_graph/3.5_minimum_spanning_tree/acwing_1141.cpp)
add_executable(acwing_1142 acwing/course/course2/3_graph/3.5_minimum_spanning_tree/acwing_1142.cpp)
add_executable(acwing_1143 acwing/course/course2/3_graph/3.5_minimum_spanning_tree/acwing_1143.cpp)
add_executable(acwing_1144 acwing/course/course2/3_graph/3.5_minimum_spanning_tree/acwing_1144.cpp)
add_executable(acwing_1146 acwing/course/course2/3_graph/3.6_minimum_spanning_tree_extensions/acwing_1146.cpp)
add_executable(acwing_1145 acwing/course/course2/3_graph/3.6_minimum_spanning_tree_extensions/acwing_1145.cpp)
add_executable(acwing_346 acwing/course/course2/3_graph/3.6_minimum_spanning_tree_extensions/acwing_346.cpp)
add_executable(acwing_1148 acwing/course/course2/3_graph/3.6_minimum_spanning_tree_extensions/acwing_1148.cpp)
add_executable(101 daimayuan/namomo_spring_camp_2022/daily/week_1/61.cpp)
add_executable(323 daimayuan/namomo_spring_camp_2022/daily/week_1/323.cpp)
add_executable(436 daimayuan/namomo_spring_camp_2022/daily/week_1/436.cpp)
add_executable(A codeforces/contest/round/789/A.cpp)
add_executable(acwing_904 acwing/course/course2/3_graph/3.7_negative_ring/acwing_904.cpp)
add_executable(acwing_361 acwing/course/course2/3_graph/3.7_negative_ring/acwing_361.cpp)
add_executable(1165 acwing/course/course2/3_graph/3.7_negative_ring/acwing_1165.cpp)
add_executable(acwing_1169 acwing/course/course2/3_graph/3.8_difference_constraints/acwing_1169.cpp)
add_executable(437 daimayuan/namomo_spring_camp_2022/daily/week_1/437.cpp)
add_executable(acwing_1170 acwing/course/course2/3_graph/3.8_difference_constraints/acwing_1170.cpp)
add_executable(acwing_362 acwing/course/course2/3_graph/3.8_difference_constraints/acwing_362.cpp)
add_executable(acwing_393 acwing/course/course2/3_graph/3.8_difference_constraints/acwing_393.cpp)
add_executable(acwing_1172 acwing/course/course2/3_graph/3.9_lca/acwing_1172.cpp)
add_executable(acwing_1171 acwing/course/course2/3_graph/3.9_lca/acwing_1171.cpp)
add_executable(451 daimayuan/namomo_spring_camp_2022/daily/week_1/451.cpp)
add_executable(acwing_356 acwing/course/course2/3_graph/3.9_lca/acwing_356.cpp)
add_executable(acwing_352 acwing/course/course2/3_graph/3.9_lca/acwing_352.cpp)
add_executable(acwing_1174 acwing/course/course2/3_graph/3.10_scc/acwing_1174.cpp)
add_executable(acwing_367 acwing/course/course2/3_graph/3.10_scc/acwing_367.cpp)
add_executable(acwing_1175 acwing/course/course2/3_graph/3.10_scc/acwing_1175.cpp)
add_executable(acwing_368 acwing/course/course2/3_graph/3.10_scc/acwing_368.cpp)
add_executable(acwing_395 acwing/course/course2/3_graph/3.11_dcc/acwing_395.cpp)
add_executable(acwing_1183 acwing/course/course2/3_graph/3.11_dcc/acwing_1183.cpp)
add_executable(acwing_396 acwing/course/course2/3_graph/3.11_dcc/acwing_396.cpp)
add_executable(P2704 luogu/practice/dp/P2704.cpp)
add_executable(acwing_292 acwing/bluebook/0x50_dp/0x56_state_compression_dp/acwing_292.cpp)
add_executable(acwing_257 acwing/course/course2/3_graph/3.12_bipartite_graph/acwing_257.cpp)
add_executable(456 daimayuan/namomo_spring_camp_2022/daily/week_1/456.cpp)
add_executable(CF1574A codeforces/practice/dfs/CF1574A.cpp)
add_executable(acwing_372 acwing/course/course2/3_graph/3.12_bipartite_graph/acwing_372.cpp)
add_executable(acwing_376 acwing/course/course2/3_graph/3.12_bipartite_graph/acwing_376.cpp)
add_executable(acwing_378 acwing/course/course2/3_graph/3.12_bipartite_graph/acwing_378.cpp)
add_executable(acwing_379 acwing/course/course2/3_graph/3.12_bipartite_graph/acwing_379.cpp)
add_executable(acwing_1123 acwing/course/course2/3_graph/3.13_euler_graph/acwing_1123.cpp)
add_executable(acwing_1184 acwing/course/course2/3_graph/3.13_euler_graph/acwing_1184.cpp)
add_executable(acwing_1124 acwing/course/course2/3_graph/3.13_euler_graph/acwing_1124.cpp)
add_executable(acwing_1185 acwing/course/course2/3_graph/3.13_euler_graph/acwing_1185.cpp)
add_executable(acwing_452 daimayuan/namomo_spring_camp_2022/daily/week_1/452.cpp)
add_executable(CF1199D codeforces/practice/other/CF1199D.cpp)
add_executable(CF103470H daimayuan/namomo_spring_camp_2022/course/week_1/H_Crystalfly_2021_Nanjing.cpp)
add_executable(C_Werewolves_2021_SEERC daimayuan/namomo_spring_camp_2022/course/week_1/C_Werewolves_2021_SEERC.cpp)
add_executable(acwing_1191 acwing/course/course2/3_graph/3.14_topo/acwing_1191.cpp)
add_executable(acwing_1192 acwing/course/course2/3_graph/3.14_topo/acwing_1192.cpp)
add_executable(acwing_164 acwing/course/course2/3_graph/3.14_topo/acwing_164.cpp)
add_executable(acwing_456 acwing/course/course2/3_graph/3.14_topo/acwing_456.cpp)
add_executable(acwing_1250 acwing/course/course2/4_data_structures/4.1_dsu/acwing_1250.cpp)
add_executable(acwing_1252 acwing/course/course2/4_data_structures/4.1_dsu/acwing_1252.cpp)
add_executable(acwing_237 acwing/course/course2/4_data_structures/4.1_dsu/acwing_237.cpp)
add_executable(acwing_239 acwing/course/course2/4_data_structures/4.1_dsu/acwing_239.cpp)
add_executable(acwing_238 acwing/course/course2/4_data_structures/4.1_dsu/acwing_238.cpp)
add_executable(464 daimayuan/namomo_spring_camp_2022/daily/week_1/464.cpp)
add_executable(454 daimayuan/namomo_spring_camp_2022/daily/week_1/454.cpp)
add_executable(acwing_244 acwing/course/course2/4_data_structures/4.2_fenwick/acwing_244.cpp)
add_executable(acwing_241 acwing/course/course2/4_data_structures/4.2_fenwick/acwing_241.cpp)
add_executable(acwing_242 acwing/course/course2/4_data_structures/4.2_fenwick/acwing_242.cpp)
add_executable(acwing_243 acwing/course/course2/4_data_structures/4.3_seg_tree/acwing_243.cpp)
add_executable(CF1573E daimayuan/namomo_spring_camp_2022/course/week_1/CF1573E.cpp)
add_executable(P4766 daimayuan/namomo_spring_camp_2022/course/week_1/P4766.cpp)
add_executable(A_Namomo_Subsequence_2020_EC_Final daimayuan/namomo_spring_camp_2022/course/week_2/A_Namomo_Subsequence_2020_EC_Final.cpp)
add_executable(G_Damaged_Bicycle_2021_CCPC_Harbin daimayuan/namomo_spring_camp_2022/course/week_2/G_Damaged_Bicycle_2021_CCPC_Harbin.cpp)
add_executable(Cow_Camp_2022USACO_February_Contest_Gold daimayuan/namomo_spring_camp_2022/course/week_2/B_Cow_Camp_USACO_2022_Feb_Gold.cpp)
add_executable(P3188 daimayuan/namomo_spring_camp_2022/course/week_2/P3188.cpp)
add_executable(466 daimayuan/namomo_spring_camp_2022/daily/week_2/466.cpp)
add_executable(467 daimayuan/namomo_spring_camp_2022/daily/week_2/467.cpp)
add_executable(468 daimayuan/namomo_spring_camp_2022/daily/week_2/468.cpp)
add_executable(497 daimayuan/namomo_spring_camp_2022/daily/week_2/497.cpp)
add_executable(CF1417E codeforces/practice/trie/CF1417E.cpp)
add_executable(469 daimayuan/namomo_spring_camp_2022/daily/week_2/469.cpp)
add_executable(P1972 daimayuan/namomo_spring_camp_2022/course/week_3/P1972.cpp)
add_executable(P4113 luogu/practice/fenwick/P4113.cpp)
add_executable(501 daimayuan/namomo_spring_camp_2022/daily/week_2/501.cpp)
add_executable(504 daimayuan/namomo_spring_camp_2022/daily/week_3/504.cpp)
add_executable(503 daimayuan/namomo_spring_camp_2022/daily/week_3/503.cpp)
add_executable(P1280 luogu/practice/dp/P1280.cpp)
add_executable(P1352 luogu/practice/dp/P1352.cpp)
add_executable(505 daimayuan/namomo_spring_camp_2022/daily/week_3/505.cpp)
add_executable(acwing_1275 acwing/course/course2/4_data_structures/4.3_seg_tree/acwing_1275.cpp)
add_executable(acwing_245 acwing/course/course2/4_data_structures/4.3_seg_tree/acwing_245.cpp)
add_executable(acwing_1016 acwing/course/course2/1_dp/1.2_lis/acwing_1016.cpp)
add_executable(acwing_246 acwing/course/course2/4_data_structures/4.3_seg_tree/acwing_246.cpp)
add_executable(acwing_247 acwing/course/course2/4_data_structures/4.3_seg_tree/acwing_247.cpp)
add_executable(acwing_1277 acwing/course/course2/4_data_structures/4.3_seg_tree/acwing_1277.cpp)
add_executable(555 daimayuan/namomo_spring_camp_2022/daily/week_3/555.cpp)
add_executable(556 daimayuan/namomo_spring_camp_2022/daily/week_3/556.cpp)
add_executable(acwing_256 acwing/course/course2/4_data_structures/4.4_persistent/acwing_256.cpp)
add_executable(acwing_255 acwing/course/course2/4_data_structures/4.4_persistent/acwing_255.cpp)
add_executable(P3919 luogu/practice/persistent_tree/P3919.cpp)
add_executable(P3834 luogu/practice/persistent_tree/P3834.cpp)
add_executable(CF1514D codeforces/practice/persistent_data_structures/CF1514D.cpp)
add_executable(CF840D codeforces/practice/persistent_data_structures/CF840D.cpp)
add_executable(CF893F codeforces/practice/persistent_data_structures/CF893F.cpp)
add_executable(559 daimayuan/namomo_spring_camp_2022/daily/week_3/559.cpp)
add_executable(560 daimayuan/namomo_spring_camp_2022/daily/week_3/560.cpp)
add_executable(562 daimayuan/namomo_spring_camp_2022/daily/week_4/562.cpp)
add_executable(CF1634F codeforces/practice/math/CF1634F.cpp)
add_executable(131 daimayuan/namomo_spring_camp_2022/daily/week_4/131.cpp)
add_executable(CF1354D daimayuan/namomo_spring_camp_2022/course/week_3/CF1354D.cpp)
add_executable(ABC234G daimayuan/namomo_spring_camp_2022/course/week_3/ABC234G.cpp)
add_executable(CF1635F daimayuan/namomo_spring_camp_2022/course/week_3/CF1635F.cpp)
add_executable(daimayuan_Closest_Equals daimayuan/namomo_spring_camp_2022/course/week_3/daimayuan_Closest_Equals.cpp)
add_executable(CF526F daimayuan/namomo_spring_camp_2022/course/week_3/CF526F.cpp)
add_executable(607 daimayuan/namomo_spring_camp_2022/daily/week_4/607.cpp)
add_executable(CF438D daimayuan/namomo_spring_camp_2022/course/week_3/CF438D.cpp)
add_executable(CF765F daimayuan/namomo_spring_camp_2022/course/week_3/CF765F.cpp)
add_executable(acwing_1282 acwing/course/course2/4_data_structures/4.6_ac_automaton/acwing_1282.cpp)
add_executable(acwing_1285 acwing/course/course2/4_data_structures/4.6_ac_automaton/acwing_1285.cpp)
add_executable(acwing_1053 acwing/course/course2/4_data_structures/4.6_ac_automaton/acwing_1053.cpp)
add_executable(608 daimayuan/namomo_spring_camp_2022/daily/week_4/608.cpp)
add_executable(611 daimayuan/namomo_spring_camp_2022/daily/week_4/611.cpp)
add_executable(P3809 daimayuan/namomo_spring_camp_2022/course/week_4/P3809.cpp)
add_executable(614 daimayuan/namomo_spring_camp_2022/daily/week_4/614.cpp)
add_executable(613 daimayuan/namomo_spring_camp_2022/daily/week_4/613.cpp)
add_executable(606 daimayuan/namomo_spring_camp_2022/daily/week_5/606.cpp)
add_executable(609 daimayuan/namomo_spring_camp_2022/daily/week_5/609.cpp)
add_executable(acwing_2715 acwing/course/course3/2_data_structures/2.10_SA/acwing_2715.cpp)
add_executable(P5353 daimayuan/namomo_spring_camp_2022/course/week_4/P5353.cpp)
add_executable(P3178 daimayuan/namomo_spring_camp_2022/course/week_4/P3178.cpp)
add_executable(P3320 daimayuan/namomo_spring_camp_2022/course/week_4/P3320.cpp)
add_executable(P4768 daimayuan/namomo_spring_camp_2022/course/week_4/P4768.cpp)
add_executable(618 daimayuan/namomo_spring_camp_2022/daily/week_5/618.cpp)
add_executable(NC11178D daimayuan/namomo_spring_camp_2022/course/week_4/NC11178D.cpp)
add_executable(acwing_1292 acwing/course/course2/5_math/5.1_prime/acwing_1292.cpp)
add_executable(acwing_1293 acwing/course/course2/5_math/5.1_prime/acwing_1293.cpp)
add_executable(acwing_196 acwing/course/course2/5_math/5.1_prime/acwing_196.cpp)
add_executable(acwing_197 acwing/course/course2/5_math/5.2_divisor/acwing_197.cpp)
add_executable(acwing_1289 acwing/course/course2/5_math/5.3_ksm/acwing_1289.cpp)
add_executable(acwing_1290 acwing/course/course2/5_math/5.3_ksm/acwing_1290.cpp)
add_executable(acwing_1291 acwing/course/course2/5_math/5.4_divisor_count/acwing_1291.cpp)
add_executable(acwing_1294 acwing/course/course2/5_math/5.4_divisor_count/acwing_1294.cpp)
add_executable(acwing_198 acwing/course/course2/5_math/5.4_divisor_count/acwing_198.cpp)
add_executable(acwing_200 acwing/course/course2/5_math/5.4_divisor_count/acwing_200.cpp)
add_executable(acwing_201 acwing/course/course2/5_math/5.5_eula_func/acwing_201.cpp)
add_executable(acwing_220 acwing/course/course2/5_math/5.5_eula_func/acwing_220.cpp)
add_executable(665 daimayuan/namomo_spring_camp_2022/daily/week_5/665.cpp)
add_executable(CF1628E daimayuan/namomo_spring_camp_2022/course/week_4/CF1628E.cpp)
add_executable(678 daimayuan/namomo_spring_camp_2022/daily/week_5/678.cpp)
add_executable(CF1486D daimayuan/namomo_spring_camp_2022/course/week_5/CF1486D.cpp)
add_executable(ABC236E daimayuan/namomo_spring_camp_2022/course/week_5/ABC236E.cpp)
add_executable(P1083 daimayuan/namomo_spring_camp_2022/course/week_5/P1083.cpp)
add_executable(H_Tree_Partition_2019_ICPC_Shanghai daimayuan/namomo_spring_camp_2022/course/week_5/H_Tree_Partition_2019_ICPC_Shanghai.cpp)
add_executable(P2824 daimayuan/namomo_spring_camp_2022/course/week_5/P2824.cpp)
add_executable(P3527 daimayuan/namomo_spring_camp_2022/course/week_5/P3527.cpp)
add_executable(CF1114E daimayuan/namomo_spring_camp_2022/course/week_5/CF1114E.cpp)
add_executable(668 daimayuan/namomo_spring_camp_2022/daily/week_5/668.cpp)
add_executable(P7424 daimayuan/namomo_spring_camp_2022/course/week_5/P7424.cpp)
add_executable(P3332 daimayuan/namomo_spring_camp_2022/course/week_5/P3332.cpp)
add_executable(P2163 luogu/practice/two_dim_counting/P2163.cpp)
add_executable(670 daimayuan/namomo_spring_camp_2022/daily/week_5/670.cpp)
add_executable(acwing_866 acwing/course/course1/4_math/4.1_prime/acwing_866.cpp)
add_executable(acwing_867 acwing/course/course1/4_math/4.1_prime/acwing_867.cpp)
add_executable(acwing_868 acwing/course/course1/4_math/4.1_prime/acwing_868.cpp)
add_executable(acwing_869 acwing/course/course1/4_math/4.2_divisor/acwing_869.cpp)
add_executable(acwing_870 acwing/course/course1/4_math/4.2_divisor/acwing_870.cpp)
add_executable(acwing_871 acwing/course/course1/4_math/4.2_divisor/acwing_871.cpp)
add_executable(acwing_872 acwing/course/course1/4_math/4.2_divisor/acwing_872.cpp)
add_executable(acwing_873 acwing/course/course1/4_math/4.3_eula_func/acwing_873.cpp)
add_executable(acwing_874 acwing/course/course1/4_math/4.3_eula_func/acwing_874.cpp)
add_executable(acwing_875 acwing/course/course1/4_math/5.4_ksm/acwing_875.cpp)
add_executable(acwing_876 acwing/course/course1/4_math/5.4_ksm/acwing_876.cpp)
add_executable(acwing_877 acwing/course/course1/4_math/5.5_exgcd/acwing_877.cpp)
add_executable(acwing_878 acwing/course/course1/4_math/5.5_exgcd/acwing_878.cpp)
add_executable(acwing_204 acwing/course/course1/4_math/5.6_crt/acwing_204.cpp)
add_executable(acwing_883 acwing/course/course1/4_math/5.7_gauss/acwing_883.cpp)
add_executable(acwing_884 acwing/course/course1/4_math/5.7_gauss/acwing_884.cpp)
add_executable(acwing_885 acwing/course/course1/4_math/5.8_comb/acwing_885.cpp)
add_executable(acwing_886 acwing/course/course1/4_math/5.8_comb/acwing_886.cpp)
add_executable(acwing_887 acwing/course/course1/4_math/5.8_comb/acwing_887.cpp)
add_executable(acwing_889 acwing/course/course1/4_math/5.8_comb/acwing_889.cpp)
add_executable(acwing_890 acwing/course/course1/4_math/5.9_principle_of_inclusion-exclusion/acwing_890.cpp)
add_executable(acwing_891 acwing/course/course1/4_math/5.10_game/acwing_891.cpp)
add_executable(acwing_892 acwing/course/course1/4_math/5.10_game/acwing_892.cpp)
add_executable(acwing_893 acwing/course/course1/4_math/5.10_game/acwing_893.cpp)
add_executable(acwing_894 acwing/course/course1/4_math/5.10_game/acwing_894.cpp)
add_executable(699 daimayuan/namomo_spring_camp_2022/daily/week_6/699.cpp)
add_executable(702 daimayuan/namomo_spring_camp_2022/daily/week_6/702.cpp)
add_executable(acwing_203 acwing/course/course2/5_math/5.6_congruence/acwing_203.cpp)
add_executable(acwing_222 acwing/course/course2/5_math/5.6_congruence/acwing_222.cpp)
add_executable(acwing_1298 acwing/course/course2/5_math/5.6_congruence/acwing_1298.cpp)
add_executable(acwing_202 acwing/course/course2/5_math/5.6_congruence/acwing_202.cpp)
add_executable(703 daimayuan/namomo_spring_camp_2022/daily/week_6/703.cpp)
add_executable(704 daimayuan/namomo_spring_camp_2022/daily/week_6/704.cpp)
add_executable(673 daimayuan/namomo_spring_camp_2022/daily/week_6/673.cpp)
add_executable(acwing_1303 acwing/course/course2/5_math/5.7_matrix/acwing_1303.cpp)
add_executable(acwing_1304 acwing/course/course2/5_math/5.7_matrix/acwing_1304.cpp)
add_executable(acwing_1305 acwing/course/course2/5_math/5.7_matrix/acwing_1305.cpp)
add_executable(acwing_1307 acwing/course/course2/5_math/5.8_comb/acwing_1307.cpp)
add_executable(acwing_1309 acwing/course/course2/5_math/5.8_comb/acwing_1309.cpp)
add_executable(acwing_1310 acwing/course/course2/5_math/5.8_comb/acwing_1310.cpp)
add_executable(acwing_1312 acwing/course/course2/5_math/5.8_comb/acwing_1312.cpp)
add_executable(709 daimayuan/namomo_spring_camp_2022/daily/week_6/709.cpp)
add_executable(707 daimayuan/namomo_spring_camp_2022/daily/week_6/707.cpp)
add_executable(701 daimayuan/namomo_spring_camp_2022/daily/week_7/701.cpp)
add_executable(671 daimayuan/namomo_spring_camp_2022/daily/week_6/671.cpp)
add_executable(NC32204B nowcoder/practice/dp/NC32204B.cpp)
add_executable(t7 lanqiao/2022_C++B-Provincial/t7.cpp)
add_executable(t5 lanqiao/2022_C++B-Provincial/t5.cpp)
add_executable(acwing_1316 acwing/course/course2/5_math/5.8_comb/acwing_1316.cpp)
add_executable(acwing_207 acwing/course/course2/5_math/5.9_gauss/acwing_207.cpp)
add_executable(acwing_208 acwing/course/course2/5_math/5.9_gauss/acwing_208.cpp)
add_executable(t8 lanqiao/2022_C++B-Provincial/t8.cpp)
add_executable(t8_gt lanqiao/2022_C++B-Provincial/t8_gt.cpp)
add_executable(acwing_214 acwing/course/course2/5_math/5.10_principle_of_inclusion-exclusion/acwing_214.cpp)
add_executable(acwing_215 acwing/course/course2/5_math/5.10_principle_of_inclusion-exclusion/acwing_215.cpp)
add_executable(acwing_217 acwing/course/course2/5_math/5.11_expect/acwing_217.cpp)
add_executable(acwing_218 acwing/course/course2/5_math/5.11_expect/acwing_218.cpp)
add_executable(P5677 luogu/practice/fenwick/P5677.cpp)
add_executable(731 daimayuan/namomo_spring_camp_2022/daily/week_7/731.cpp)
add_executable(acwing_1319 acwing/course/course2/5_math/5.12_game/acwing_1319.cpp)
add_executable(acwing_1321 acwing/course/course2/5_math/5.12_game/acwing_1321.cpp)
add_executable(712 daimayuan/namomo_spring_camp_2022/daily/week_7/712.cpp)
add_executable(733 daimayuan/namomo_spring_camp_2022/daily/week_7/733.cpp)
add_executable(acwing_90 acwing/course/course2/6_base_algorithm/6.1_bit_operation/acwing_90.cpp)
add_executable(acwing_95 acwing/course/course2/6_base_algorithm/6.2_Iterative_and_recursion/acwing_95.cpp)
add_executable(acwing_97 acwing/course/course2/6_base_algorithm/6.2_Iterative_and_recursion/acwing_97.cpp)
add_executable(acwing_99 acwing/course/course2/6_base_algorithm/6.3_presum_and_diff/acwing_99.cpp)
add_executable(acwing_100 acwing/course/course2/6_base_algorithm/6.3_presum_and_diff/acwing_100.cpp)
add_executable(NC26086C nowcoder/practice/monotonic_stack/NC26086C.cpp)
add_executable(NC11220F nowcoder/practice/graph/NC11220F.cpp)
add_executable(NC11220E nowcoder/practice/dp/NC11220E.cpp)
add_executable(acwing_1083_gt acwing/course/course2/1_dp/1.8_digit/acwing_1083_gt.cpp)
add_executable(acwing_1081_gt acwing/course/course2/1_dp/1.8_digit/acwing_1081_gt.cpp)
add_executable(acwing_1082_gt acwing/course/course2/1_dp/1.8_digit/acwing_1082_gt.cpp)
add_executable(acwing_1084_gt acwing/course/course2/1_dp/1.8_digit/acwing_1084_gt.cpp)
add_executable(acwing_1085_gt acwing/course/course2/1_dp/1.8_digit/acwing_1085_gt.cpp)
add_executable(acwing_102 acwing/course/course2/6_base_algorithm/6.4_binary/acwing_102.cpp)
add_executable(735 daimayuan/namomo_spring_camp_2022/daily/week_7/735.cpp)
add_executable(acwing_105 acwing/course/course2/6_base_algorithm/6.5_sort/acwing_105.cpp)
add_executable(acwing_106 acwing/course/course2/6_base_algorithm/6.5_sort/acwing_106.cpp)
add_executable(acwing_107 acwing/course/course2/6_base_algorithm/6.5_sort/acwing_107.cpp)
add_executable(acwing_1273 acwing/course/course2/6_base_algorithm/6.6_RMQ/acwing_1273.cpp)
add_executable(CF102984F codeforces/practice/game/CF102984F.cpp)
add_executable(737 daimayuan/namomo_spring_camp_2022/daily/week_7/737.cpp)
add_executable(741 daimayuan/namomo_spring_camp_2022/daily/week_7/741.cpp)
add_executable(744 daimayuan/namomo_spring_camp_2022/daily/week_8/744.cpp)
add_executable(acwing_2702 acwing/course/course3/5_math/5.1_mobius/acwing_2702.cpp)
add_executable(acwing_1358 acwing/course/course3/5_math/5.1_mobius/acwing_1358.cpp)
add_executable(acwing_221 acwing/course/course3/5_math/5.2_product_function/acwing_221.cpp)
add_executable(P3327 luogu/practice/mobius/P3327.cpp)
add_executable(P1829 daimayuan/namomo_spring_camp_2022/course/week_6/P1829.cpp)
add_executable(P3372 luogu/practice/seg_tree/P3372.cpp)
add_executable(NC1076B nowcoder/practice/seg_tree/NC1076B.cpp)
add_executable(P2572 daimayuan/namomo_spring_camp_2022/course/week_7/P2572.cpp)
add_executable(hdu_1003 hdu/practice/dp/hdu_1003.cpp)
add_executable(675 daimayuan/namomo_spring_camp_2022/daily/week_8/675.cpp)
add_executable(746 daimayuan/namomo_spring_camp_2022/daily/week_8/746.cpp)
add_executable(acwing_2171 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.1_template/acwing_2171.cpp)
add_executable(NC30825A daimayuan/namomo_spring_camp_2022/course/week_7/NC30825A.cpp)
add_executable(PP5579 daimayuan/namomo_spring_camp_2022/course/week_7/P5579.cpp)
add_executable(NC31454G daimayuan/namomo_spring_camp_2022/course/week_7/NC31454G.cpp)

add_executable(738 daimayuan/namomo_spring_camp_2022/daily/week_8/738.cpp)
add_executable(NC30825A_seg daimayuan/namomo_spring_camp_2022/course/week_7/NC30825A_seg.cpp)
add_executable(P5579_seg daimayuan/namomo_spring_camp_2022/course/week_7/P5579_seg.cpp)
add_executable(acwing_2172 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.1_template/acwing_2172.cpp)
add_executable(acwing_2175 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.2_bipartite_graph/acwing_2175.cpp)
add_executable(acwing_2179 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.2_bipartite_graph/acwing_2179.cpp)
add_executable(acwing_2188 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.3_upper_and_lower_bound_flow/acwing_2188.cpp)
add_executable(CF1609F daimayuan/namomo_spring_camp_2022/course/week_7/CF1609F.cpp)
add_executable(807 daimayuan/namomo_spring_camp_2022/daily/week_8/807.cpp)
add_executable(CF364E daimayuan/namomo_spring_camp_2022/course/week_7/CF364E.cpp)

add_executable(H codeforces/contest/round/784/H.cpp)
add_executable(acwing_2189 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.3_upper_and_lower_bound_flow/acwing_2189.cpp)
add_executable(acwing_2190 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.3_upper_and_lower_bound_flow/acwing_2190.cpp)
add_executable(acwing_2234 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.4_multi_source/acwing_2234.cpp)
add_executable(acwing_2236 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.5_key_edge/acwing_2236.cpp)
add_executable(ABC247F daimayuan/namomo_spring_camp_2022/course/week_8/ABC247F.cpp)
add_executable(loj_6089 daimayuan/namomo_spring_camp_2022/course/week_8/loj_6089.cpp)
add_executable(P6189 daimayuan/namomo_spring_camp_2022/course/week_8/P6189.cpp)
add_executable(813 daimayuan/namomo_spring_camp_2022/daily/week_8/813.cpp)
add_executable(804 daimayuan/namomo_spring_camp_2022/daily/week_8/804.cpp)
add_executable(811 daimayuan/namomo_spring_camp_2022/daily/week_9/811.cpp)

add_executable(F1 codeforces/contest/global_round/20/F1.cpp)
add_executable(F2 codeforces/contest/global_round/20/F2.cpp)
add_executable(664 daimayuan/namomo_spring_camp_2022/daily/week_9/664.cpp)
add_executable(806 daimayuan/namomo_spring_camp_2022/daily/week_9/806.cpp)
add_executable(acwing_2277 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.6_check/acwing_2277.cpp)
add_executable(acwing_2187 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.6_check/acwing_2187.cpp)
add_executable(acwing_2240 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.7_split_point/acwing_2240.cpp)
add_executable(acwing_2180 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.7_split_point/acwing_2180.cpp)
add_executable(acwing_2278 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.7_split_point/acwing_2278.cpp)
add_executable(acwing_2237 acwing/course/course3/1_graph/1.1_maximum_flow/1.1.8_practice/acwing_2237.cpp)
add_executable(acwing_2173 acwing/course/course3/1_graph/1.2_min_cut/1.2.1_template/acwing_2173.cpp)
add_executable(acwing_2279 acwing/course/course3/1_graph/1.2_min_cut/1.2.2_application_based_on_definition/acwing_2279.cpp)
add_executable(acwing_2280 acwing/course/course3/1_graph/1.2_min_cut/1.2.2_application_based_on_definition/acwing_2280.cpp)
add_executable(805 daimayuan/namomo_spring_camp_2022/daily/week_9/805.cpp)
add_executable(poj_1737 daimayuan/namomo_spring_camp_2022/course/week_8/poj_1737.cpp)
add_executable(CF1657E daimayuan/namomo_spring_camp_2022/course/week_8/CF1657E.cpp)
add_executable(AGC041D daimayuan/namomo_spring_camp_2022/course/week_8/AGC041D.cpp)
add_executable(848 daimayuan/namomo_spring_camp_2022/daily/week_9/848.cpp)
add_executable(acwing_2325 acwing/course/course3/1_graph/1.2_min_cut/1.2.5_minimum_vertex_covering_set_and_maximum_weight_vertex_independent_set/acwing_2325.cpp)
add_executable(acwing_2326 acwing/course/course3/1_graph/1.2_min_cut/1.2.5_minimum_vertex_covering_set_and_maximum_weight_vertex_independent_set/acwing_2326.cpp)
add_executable(acwing_381 acwing/course/course3/1_graph/1.2_min_cut/1.2.6_practice/acwing_381.cpp)
add_executable(acwing_2176 acwing/course/course3/1_graph/1.2_min_cut/1.2.6_practice/acwing_2199.cpp)
add_executable(1.3.1_template acwing/course/course3/1_graph/1.3_cost_flow/1.3.1_template/acwing_2174.cpp)
add_executable(acwing_2192 acwing/course/course3/1_graph/1.3_cost_flow/1.3.2_application_based_on_definition/acwing_2192.cpp)
add_executable(acwing_2194 acwing/course/course3/1_graph/1.3_cost_flow/1.3.2_application_based_on_definition/acwing_2194.cpp)
add_executable(acwing_2193 acwing/course/course3/1_graph/1.3_cost_flow/1.3.3_bipartite_graph/acwing_2193.cpp)
add_executable(acwing_2191 acwing/course/course3/1_graph/1.3_cost_flow/1.3.6_practice/acwing_2191.cpp)
add_executable(acwing_382 acwing/course/course3/1_graph/1.3_cost_flow/1.3.6_practice/acwing_382.cpp)
add_executable(acwing_2195 acwing/course/course3/1_graph/1.3_cost_flow/1.3.6_practice/acwing_2195.cpp)

add_executable(acwing_2184 acwing/course/course3/1_graph/1.3_cost_flow/1.3.4_split_point/acwing_2184.cpp)
add_executable(acwing_969 acwing/course/course3/1_graph/1.3_cost_flow/1.3.5_upper_and_lower_bound_flow/acwing_969.cpp)
add_executable(853 daimayuan/namomo_spring_camp_2022/daily/week_9/853.cpp)
add_executable(854 daimayuan/namomo_spring_camp_2022/daily/week_10/854.cpp)

add_executable(P4550 daimayuan/namomo_spring_camp_2022/course/week_9/P4550.cpp)
add_executable(P4316 daimayuan/namomo_spring_camp_2022/course/week_9/P4316.cpp)
add_executable(NC32708B daimayuan/namomo_spring_camp_2022/course/week_9/NC32708B.cpp)
add_executable(hdu_5194 daimayuan/namomo_spring_camp_2022/course/week_9/hdu_5194.cpp)
add_executable(NC32708G daimayuan/namomo_spring_camp_2022/course/week_9/NC32708G.cpp)
add_executable(CF280C daimayuan/namomo_spring_camp_2022/course/week_9/CF280C.cpp)

add_executable(846 daimayuan/namomo_spring_camp_2022/daily/week_10/846.cpp)
add_executable(P3232 daimayuan/namomo_spring_camp_2022/course/week_9/P3232.cpp)
add_executable(852 daimayuan/namomo_spring_camp_2022/daily/week_10/852.cpp)
add_executable(hdu_5215 daimayuan/namomo_spring_camp_2022/course/week_10/hdu_5215.cpp)
add_executable(CF521E daimayuan/namomo_spring_camp_2022/course/week_10/CF521E.cpp)
add_executable(CF19E daimayuan/namomo_spring_camp_2022/course/week_10/CF19E.cpp)
add_executable(hdu_4857 daimayuan/namomo_spring_camp_2022/course/week_10/hdu_4857.cpp)
add_executable(P1954 daimayuan/namomo_spring_camp_2022/course/week_10/P1954.cpp)
add_executable(845 daimayuan/namomo_spring_camp_2022/daily/week_10/845.cpp)
add_executable(CF101173H daimayuan/namomo_spring_camp_2022/course/week_10/CF101173H.cpp)
add_executable(acwing_2402 acwing/course/course3/1_graph/1.4_2-sat/acwing_2402.cpp)
add_executable(acwing_371 acwing/course/course3/1_graph/1.4_2-sat/acwing_371.cpp)
add_executable(acwing_1032 acwing/course/course3/1_graph/1.4_2-sat/acwing_1032.cpp)
add_executable(acwing_2417 acwing/course/course3/1_graph/1.5_edmonds/acwing_2417.cpp)
add_executable(acwing_2419 acwing/course/course3/1_graph/1.6_prufer/acwing_2419.cpp)
add_executable(acwing_2418 acwing/course/course3/1_graph/1.6_prufer/acwing_2418.cpp)
add_executable(815 daimayuan/namomo_spring_camp_2022/daily/week_10/815.cpp)
add_executable(870 daimayuan/namomo_spring_camp_2022/daily/week_10/870.cpp)

add_executable(acwing_253_fenwick acwing/course/course2/4_data_structures/4.5_treap/acwing_253_fenwick.cpp)
add_executable(acwing_265 acwing/course/course2/4_data_structures/4.5_treap/acwing_265.cpp)
add_executable(P3369 luogu/practice/fenwick/P3369.cpp)
add_executable(P3369_fhq luogu/practice/balance_tree/P3369_fhq.cpp)
add_executable(acwing_2437_fhq acwing/course/course3/2_data_structures/1.1_splay/acwing_2437_fhq.cpp)
add_executable(P6136_fhq luogu/practice/balance_tree/P6136_fhq.cpp)
add_executable(acwing_950 acwing/course/course3/2_data_structures/1.1_splay/acwing_950_fhq.cpp)
add_executable(acwing_950_fenwick acwing/course/course3/2_data_structures/1.1_splay/acwing_950_fenwick.cpp)
add_executable(acwing_1063_fhq acwing/course/course3/2_data_structures/1.1_splay/acwing_1063_fhq.cpp)
add_executable(acwing_955 acwing/course/course3/2_data_structures/1.1_splay/acwing_955_fhq.cpp)
add_executable(850 daimayuan/namomo_spring_camp_2022/daily/week_10/850.cpp)
add_executable(154 daimayuan/namomo_spring_camp_2022/daily/week_11/154.cpp)
add_executable(155 daimayuan/namomo_spring_camp_2022/daily/week_11/155.cpp)
add_executable(acwing_2488 acwing/course/course3/2_data_structures/1.2_tree_nesting_tree/acwing_2488.cpp)
add_executable(acwing_2476 acwing/course/course3/2_data_structures/1.2_tree_nesting_tree/acwing_2476.cpp)

add_executable(B1 codeforces/contest/round/789/B1.cpp)
add_executable(B2 codeforces/contest/round/789/B2.cpp)
add_executable(acwing_2306 acwing/course/course3/2_data_structures/1.2_tree_nesting_tree/acwing_2306.cpp)

add_executable(865 daimayuan/namomo_spring_camp_2022/daily/week_11/865.cpp)
add_executable(acwing_243_sqrt acwing/course/course3/2_data_structures/1.3_sqrt/acwing_243_sqrt.cpp)
add_executable(acwing_947 acwing/course/course3/2_data_structures/1.3_sqrt/acwing_947.cpp)

add_executable(P3201 luogu/practice/dsu_on_tree/P3201.cpp)
add_executable(F codeforces/contest/round/789/F.cpp)

add_executable(47 daimayuan/namomo_spring_camp_2022/daily/week_11/47.cpp)
add_executable(856 daimayuan/namomo_spring_camp_2022/daily/week_11/856.cpp)

add_executable(acwing_2492 acwing/course/course3/2_data_structures/1.4_mo_algo/acwing_2492.cpp)
add_executable(acwing_2521 acwing/course/course3/2_data_structures/1.4_mo_algo/acwing_2521.cpp)
add_executable(acwing_2523 acwing/course/course3/2_data_structures/1.4_mo_algo/acwing_2523.cpp)
add_executable(acwing_2534 acwing/course/course3/2_data_structures/1.4_mo_algo/acwing_2534.cpp)
add_executable(acwing_2535 acwing/course/course3/2_data_structures/1.4_mo_algo/acwing_2535.cpp)
add_executable(885 daimayuan/namomo_spring_camp_2022/daily/week_11/885.cpp)
add_executable(885_dp daimayuan/namomo_spring_camp_2022/daily/week_11/885_dp.cpp)
add_executable(acwing_2568 acwing/course/course3/2_data_structures/1.5_heavy_path_decomposition/acwing_2568.cpp)
add_executable(acwing_918 acwing/course/course3/2_data_structures/1.5_heavy_path_decomposition/acwing_918.cpp)
add_executable(883 daimayuan/namomo_spring_camp_2022/daily/week_11/883.cpp)